# projet_vision_suite

./: README.md
PlateRecognizer/: CMakeLists.txt
PlateRecognizer/MNIST/: CMakeLists.txt
PlateRecognizer/MNIST/include/: MNIST.h
PlateRecognizer/MNIST/src/: MNIST.cpp
PlateRecognizer/include/: Image.h  Image.hpp  NeuralNetwork.h  Plate.h  PlateRecognizer.h  Util.hpp  opencvincludes.h
PlateRecognizer/src/: CMakeLists.txt  Image.cpp  NeuralNetwork.cpp  Plate.cpp  PlateRecognizer.cpp  main.cpp
